<resources>
    <string name="app_name">WaterTrack</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>

    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Sync</item>
    </string-array>


    <string-array name="problem_report">
        <item>Water leak in the meter</item>
        <item>Incorrect consumption reading</item>
        <item>Fogged display glass</item>
        <item>Internal mechanism blockage</item>
        <item>Meter malfunction or stopped</item>
        <item>Loose or damaged connection</item>
        <item>Presence of air in the pipes</item>
        <item>Dirt or debris infiltration</item>
        <item>Meter freezing (in cold weather)</item>
        <item>Improper handling of the equipment</item>
        <item>Oxidation or rust on metal connections</item>
        <item>Communication failure with remote system</item>
        <item>Internal battery discharged (in electronic meters)</item>
        <item>Broken security seal</item>
        <item>Incorrect meter installation</item>
        <item>Other</item>
    </string-array>


    <!-- GENERAL -->
    <string name="general_continue">Continue</string>
    <string name="general_confirm">Confirm</string>
    <string name="general_ok">Ok</string>
    <string name="general_yes">Yes</string>
    <string name="general_save">Save</string>
    <string name="general_dontSave">Don\'t Save</string>
    <string name="general_no">No</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_delete">Delete</string>
    <!-- AUTH ACTIVITY | LOGIN FRAGMENT -->
    <string name="authActivity_LoginFrag_TextField_Email">Email</string>
    <string name="authActivity_LoginFrag_TextField_Password">Password</string>
    <string name="authActivity_LoginFrag_Button_Login">Login</string>
    <string name="authActivity_LoginFrag_TextButton_ForgotPassword">Forgot Password?</string>
    <string name="authActivity_LoginFrag_TextButton_NewUser">New User? Register Now</string>
    <string name="authActivity_LoginFrag_Field_RequiredField_Error">Required field</string>
    <string name="authActivity_LoginFrag_LocalDB_Insert_Error">Wasn\'t able to save the user info. Please login again.</string>
    <!-- AUTH ACTIVITY | REGISTER FRAGMENT -->
    <string name="authActivity_RegisterFrag_TextField_Email">Email</string>
    <string name="authActivity_RegisterFrag_TextField_Password">Password</string>
    <string name="authActivity_RegisterFrag_TextField_ConfirmPassword">Confirm Password</string>
    <string name="authActivity_RegisterFrag_Button_Register">Register</string>
    <string name="authActivity_RegisterFrag_TextButton_OldUser">Already a User? Login Now</string>
    <!-- MAIN ACTIVITY -->
    <string name="mainActivity_SideMenu_Settings">Settings</string>
    <string name="mainActivity_SideMenu_Reports">Reports</string>
    <string name="mainActivity_SideMenu_Credits">Credits</string>
    <string name="mainActivity_SideMenu_Logout">Logout</string>
    <string name="mainActivity_AlertDialog_BackPressed_AddContador_Title">Exit</string>
    <string name="mainActivity_AlertDialog_BackPressed_AddContador_Desc">Do you wish to exit without saving?</string>
    <!-- MAIN ACTIVITY | MAIN VIEW -->
    <string name="mainActivity_MainViewFrag_LabelConadores">My Meters</string>
    <string name="mainActivity_MainViewFrag_TextView_NothingToDisplay">Theres no Meters to be displayed.</string>
    <string name="mainActivity_MainViewFrag_SnackBar_NothingToSearch">Theres no Meters to be searched.</string>
    <string name="mainActivity_MainViewFrag_TextField_Search">Search</string>
    <string name="mainActivity_MainViewFrag_PopUpMenu_Address">Address</string>
    <string name="mainActivity_MainViewFrag_PopUpMenu_Name">Name</string>
    <string name="mainActivity_MainViewFrag_SnackBar_OptionNotSelected">Please select address or name.</string>
    <!-- MAIN ACTIVITY | ADD CONTADOR -->
    <string name="mainActivity_AddContadorFrag_TextField_Address">Address</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Residents">Resident</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Type">Type</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Enterprise">Enterprise</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Class">Class</string>
    <string name="mainActivity_AddContadorFrag_DatePicker_Date">Installation Date</string>
    <string name="mainActivity_AddContadorFrag_DatePicker_Date_IconDesc">Open Date Picker</string>
    <string name="mainActivity_AddContadorFrag_TextField_MaxCap">Maximum Capacity</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_MeasureUnity">Measure Unity</string>
    <string name="mainActivity_AddContadorFrag_TextField_SupportedTemp">Supported Temperature</string>
    <string name="mainActivity_AddContadorFrag_ComboBox_Status">Status</string>
    <!-- MAIN ACTIVITY | DETAILS CONTADOR -->
    <string name="mainActivity_DetailsContadorFrag_Header">Meter</string>
    <string name="mainActivity_DetailsContadorFrag_infoRow_Contador_Name">Meter</string>
    <string name="mainActivity_DetailsContadorFrag_infoRow_Contador_Address">Meter</string>
    <!-- MAIN ACTIVITY | READINGS CONTADOR -->
    <string name="mainActivity_ReadingsContadorFrag_LabelDetails">Reading Details</string>
    <string name="mainActivity_ReadingsContadorFrag_LabelReadings">Readings</string>
    <!-- MAIN ACTIVITY | ADD REPORT -->
    <string name="mainActivity_ReportFrag_ComboBox_Meter">Meter</string>
    <string name="mainActivity_ReportFrag_ComboBox_Problem">Problem</string>
    <string name="mainActivity_ReportFrag_TextField_Description">Description</string>
    <string name="mainActivity_ReportFrag_TextField_Other_Problem">Other</string>

    <!-- CREDITS -->
    <string name="mainActivity_CreditsFrag_Header">Credits</string>
    <string name="credits_developers_1">2241567 - Alexandre Conrado</string>
    <string name="credits_developers_2">2241570 - Guilherme Silva</string>
    <string name="credits_developers_3">2241572 - Diogo Soares</string>
    <string name="credits_icons_search">Search - Created by Royyan Wijaya - Flaticon</string>
    <string name="credits_icons_water_drop">Water Drop - Created by Good Ware - Flaticon</string>
    <string name="credits_icons_radios_button_icon">Radios Button Icon - Created by Bharat Icons - Flaticon</string>
    <string name="credits_icons_warning">Warning - Created by Gregor Cresnar - Flaticon</string>
    <string name="credits_icons_info">Info - Created by Stockio - Flaticon</string>
    <string name="credits_icons_exit">Exit - Created by Freepik - Flaticon</string>
    <string name="credits_icons_settings">Settings - Created by Freepik - Flaticon</string>
    <string name="credits_icons_arrow">Arrow - Created by Ilham Fitrotul Hayat - Flaticon</string>
    <string name="credits_icons_close">Close - Created by inkubators - Flaticon</string>
</resources>