<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.mainactivityfrags.addcontadorview.MainAcAddContadorFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!-- ADDRESS - TEXT INPUT -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldAddress_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mainActivity_AddContadorFrag_TextField_Address"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"  >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_Address_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- ID RESIDENT - COMBO BOX -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_ComboBox_Residents_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/outlinedTextFieldAddress_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_ComboBox_Residents"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/comboBox_Residents_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    android:padding="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- ID TYPE - COMBO BOX -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_ComboBox_IdType_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout_ComboBox_Residents_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_ComboBox_Type"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/comboBox_IdType_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    android:padding="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- ID ENTERPRISE - COMBO BOX -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_ComboBox_IdEnterprise_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout_ComboBox_IdType_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_ComboBox_Enterprise"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/comboBox_IdEnterprise_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    android:padding="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- CLASS - COMBO BOX -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_ComboBox_Class_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout_ComboBox_IdEnterprise_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_ComboBox_Class"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/comboBox_Class_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    android:padding="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- INSTALLATION DATE - DATE PICKER -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_DatePicker_InstallationDate_AddContadorFrag_MainAc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout_ComboBox_Class_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_DatePicker_Date"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/baseline_date_range_24"
                app:endIconContentDescription="@string/mainActivity_AddContadorFrag_DatePicker_Date_IconDesc"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/datePicker_InstallationDate_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>
            <!-- MAX CAPACITY - TEXT INPUT -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_TextInput_MaxCap_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayout_DatePicker_InstallationDate_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_TextField_MaxCap"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"  >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_MaxCap_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- MEASURE UNITY - COMBO BOX -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_ComboBox_MeasureUnity_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayout_TextInput_MaxCap_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_ComboBox_MeasureUnity"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/comboBox_MesureUnity_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    android:padding="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- SUPPORTED TEMPERATURE - TEXT INPUT -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_TextInput_SupportedTemp_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayout_ComboBox_MeasureUnity_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_TextField_SupportedTemp"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"  >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_SupportedTemp_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- STATUS - COMBO BOX -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_ComboBox_Status_AddContadorFrag_MainAc"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayout_TextInput_SupportedTemp_AddContadorFrag_MainAc"
                android:hint="@string/mainActivity_AddContadorFrag_ComboBox_Status"
                app:hintTextColor="@color/textfield_stroke_colors"
                app:boxStrokeColor="@color/textfield_stroke_colors"
                app:boxStrokeErrorColor="?attr/colorError"
                app:boxStrokeWidth="@dimen/_2sdp"
                app:boxStrokeWidthFocused="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/comboBox_Status_AddContadorFrag_MainAc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    android:padding="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- ADD - BUTTON -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/butLogin_LoginFrag_AuthAc"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:paddingTop="@dimen/_7sdp"
                android:text="@string/general_save"
                android:layout_below="@+id/inputLayout_ComboBox_Status_AddContadorFrag_MainAc"
                app:cornerRadius="@dimen/_8sdp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="?attr/buttonTint"
                android:textColor="?attr/textColorButtons"/>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>