<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".fragments.authactivity.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/holder_imageView_Logo_LoginFrag"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_150sdp">
            <ImageView
                android:id="@+id/imageView_logo_LoginFrag"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:background="@drawable/logocomtexto"/>
        </FrameLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldEmail"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/holder_imageView_Logo_LoginFrag"
            android:hint="@string/authActivity_LoginFrag_TextField_Email"
            app:hintTextColor="@color/textfield_stroke_colors"
            app:boxStrokeColor="@color/textfield_stroke_colors"
            app:boxStrokeErrorColor="?attr/colorError"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:boxStrokeWidthFocused="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="?attr/textOutlineColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_Email_LoginFrag_AuthAc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/outlinedTextFieldEmail"
            android:hint="@string/authActivity_LoginFrag_TextField_Password"
            app:hintTextColor="@color/textfield_stroke_colors"
            app:boxStrokeColor="@color/textfield_stroke_colors"
            app:boxStrokeErrorColor="?attr/colorError"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:boxStrokeWidthFocused="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconTint="?attr/colorOnSurfaceVariant"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/colorOnSurfaceVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_Password_LoginFrag_AuthAc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <FrameLayout
            android:id="@+id/holder_buttonLogin_LoginFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/outlinedTextFieldPassword"
            android:layout_marginTop="@dimen/_12sdp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/butLogin_LoginFrag_AuthAc"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:text="@string/authActivity_LoginFrag_Button_Login"
                app:cornerRadius="8dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="?attr/buttonTint"
                android:textColor="?attr/textColorPrimary"/>
        </FrameLayout>
        <FrameLayout
            android:layout_below="@id/holder_buttonLogin_LoginFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/butForgotPassword_LoginFrag_AuthAc"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authActivity_LoginFrag_TextButton_ForgotPassword"
                    android:textColor="?attr/buttonTint"
                    android:textAllCaps="false"
                    android:backgroundTint="@android:color/transparent"
                    android:padding="0dp"
                    android:insetLeft="0dp"
                    android:insetRight="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginRight="@dimen/_7sdp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/butRegister_LoginFrag_AuthAc"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authActivity_LoginFrag_TextButton_NewUser"
                    android:textColor="?attr/buttonTint"
                    android:textAllCaps="false"
                    android:backgroundTint="@android:color/transparent"
                    android:padding="0dp"
                    android:insetLeft="0dp"
                    android:insetRight="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginLeft="@dimen/_7sdp"/>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
</FrameLayout>